test/files/neg/classmanifests_new_deprecations.check
classmanifests_new_deprecations.scala:4: warning: type ClassManifest in package reflect is deprecated (since 2.10.0): use scala.reflect.ClassTag instead
  def rcm1[T: scala.reflect.ClassManifest] = ???
            ^
classmanifests_new_deprecations.scala:5: warning: type ClassManifest in package reflect is deprecated (since 2.10.0): use scala.reflect.ClassTag instead
  def rcm2[T](implicit evidence$1: scala.reflect.ClassManifest[T]) = ???
                                                 ^
classmanifests_new_deprecations.scala:6: warning: type ClassManifest in package reflect is deprecated (since 2.10.0): use scala.reflect.ClassTag instead
  val rcm3: scala.reflect.ClassManifest[Int] = null
                          ^
classmanifests_new_deprecations.scala:8: warning: type ClassManifest in package reflect is deprecated (since 2.10.0): use scala.reflect.ClassTag instead
  type RCM[T] = scala.reflect.ClassManifest[T]
                              ^
4 warnings
error: No warnings can be incurred under -Werror.
